--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>TAQUERÍA EL PUERQUITO 🐷</h1>
+        <h1>🐷 TAQUERÍA EL PUERQUITO 🐷</h1>
         <h2><i>¡MÁS GRASOSOS MÁS SABROSOS!</i></h2> 
         <img src="cerdo.png" width="33%" alt="cerdo_dibujo">
     </header>
