cambio en ruta de imagenes

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <header>
         <h1>🐷 TAQUERÍA EL PUERQUITO 🐷</h1>
         <h2><i>¡MÁS GRASOSOS MÁS SABROSOS!</i></h2> 
-        <img src="/img/cerdo.png" width="33%" alt="cerdo_dibujo">
+        <img src="../taqueriapuerquito/img/cerdo.png" width="33%" alt="cerdo_dibujo">
     </header>
     <main>
         <section>
             <h2>MENÚ</h2>
-            <img src="/img/tacos.png" width="33%" alt="taco_emoji">
+            <img src="../taqueriapuerquito/img/tacos.png" width="33%" alt="taco_emoji">
             <h3>TACOS: LOS BÁSICOS Y POPULARES</h3>
             <ul>
             <li>Suadero.....$18.00</li>
